--- a/show_version.yml
+++ b/show_version.yml
@@ -1,10 +1,19 @@
+---
 - name: Get version information from Cisco switch
   hosts: ASR_920
   gather_facts: 'no'
   connection: network_cli
+  vars_files:
+   - group_vars/vault.yml
+
 
   vars:
     ansible_network_os: cisco.ios.ios
+    ansible_user: "{{ username }}"
+    ansible_password: "{{ password }}"
+    ansible_network_os: ios
+    ansible_connection: network_cli
+
 
   tasks:
     - name: Gather IOS facts from Cisco switch
