--- a/show_version.yml
+++ b/show_version.yml
@@ -8,7 +8,7 @@
 
 
   vars:
-    ansible_network_os: cisco.ios.ios
+    #    ansible_network_os: cisco.ios.ios
     ansible_user: "{{ username }}"
     ansible_password: "{{ password }}"
     ansible_network_os: ios
@@ -17,7 +17,8 @@
 
   tasks:
     - name: Gather IOS facts from Cisco switch
-      cisco.ios.ios_facts: null
+      cisco.ios.ios_facts:
     - name: Display version information
       debug:
         msg: 'Cisco Switch Version: {{ ansible_net_version }}'
+        
