--- a/show_version.yml
+++ b/show_version.yml
@@ -16,9 +16,12 @@
 
 
   tasks:
-    - name: Gather IOS facts from Cisco switch
-      cisco.ios.ios_facts:
-    - name: Display version information
+    - name: Run show version
+      cisco.ios.ios_command:
+        commands:
+          - show version
+      register: version_output
+
+    - name: Display the output
       debug:
-        msg: 'Cisco Switch Version: {{ ansible_net_version }}'
-        
+        var: version_output.stdout_lines
